Updating to version 9.2.23-SNAPSHOT